chore: update travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,14 @@ branches:
   only:
     - master
 
+# Install the codecov pip dependency
+install:
+  - pip install codecov
+
+# Run the unit test
+script:
+  - coverage run tests.py
+
+# Push the results back to codecov
+after_success:
+  - codecov
